# shiftstat

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_NOTE.md  LICENSE  README.md  RELEASE.md  SECURITY.md  build-preprint.cmd  build-preprint.ps1  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_request.md  bug_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  run_reliability_benchmark.py  run_selective_benchmark.py  run_synthetic.py  run_v3_audit_benchmark.py  run_v5_benchmark_suite.py
benchmarks/configs/: default_experiment.json  reliability_sweep.json  selective_benchmark.json  v3_audit_benchmark.json  v5_publication_suite.yaml
docs/: abstention_limits.md  abstention_tradeoffs.md  aggregate_failures.md  api_stability.md  audit.md  benchmarking.md  calibration.md  certified_worst_group_audits.md  contributing.md  deployment_guidance.md  detection.md  examples.md  experiment_configuration.md  index.md  installation.md  known_limitations.md  paper_artifacts.md  publication_workflow.md  quickstart.md  release_process.md  reliability.md  reliability_theory.md  reproducibility.md  responsible_diagnostics.md  reweighting.md  risk_coverage.md  scientific_case_studies.md  selective_prediction.md  slice_discovery.md  subgroup.md  testing_and_ci.md  theory.md  user_guide.md  workflows.md
docs/api/: audit.md  bench.md  calibration.md  certification.md  detect.md  experiments.md  index.md  metrics.md  reliability.md  reweight.md  selective.md  subgroup.md  utils.md
examples/: __init__.py  abstention_under_shift.py  aggregate_vs_subgroup_calibration.py  benchmark_covariate_sweep.py  calibration_degradation_under_shift.py  deployment_audit_case_study.py  detect_feature_drift.py  discover_failure_slices.py  experiment_configuration_workflow.py  full_workflow.py  generate_paper_ready_artifacts.py  hidden_subgroup_failures_under_shift.py  importance_weighting_evaluation.py  recalibration_under_shift.py  reliability_benchmark_with_subgroup_failures.py  reliability_report_workflow.py  selective_deployment_case_study.py  selective_prediction_benchmark.py  subgroup_rejection_analysis.py  weighted_calibration_evaluation.py  weighted_threshold_tuning_under_shift.py
paper_assets/: README.md  inventory.md
paper_assets/configs/: publication_suite.yaml  subgroup_case_study.yaml
preprint/: README.md  build.ps1  main.aux  main.bbl  main.blg  main.out  main.tex  refs.bib
preprint/figures/: README.md
preprint/research/: acs_external_validation_study.py  adaptive_search_study.py  certified_audit_study.py  estimated_weight_study.py  local_ess_memo.md  local_ess_study.py  plot_certified_audit.py  plot_estimated_and_adaptive.py  plot_local_ess_main.py  real_data_case_study.py
preprint/research/results/acs_external_validation/: acs_external_validation_cells.csv  acs_external_validation_summary.csv
preprint/research/results/adaptive_search/: adaptive_search_decisions.csv  adaptive_search_summary.csv
preprint/research/results/adult_case_study/: adult_case_cells.csv  adult_case_summary.csv
preprint/research/results/certified_audit/: certified_audit_decisions.csv  certified_audit_summary.csv
preprint/research/results/estimated_weights/: estimated_weight_decisions.csv  estimated_weight_summary.csv
preprint/research/results/local_ess/: local_ess_diagnostics.json  local_ess_replicates.csv  local_ess_summary.csv
preprint/research/results/local_ess_logistic/: local_ess_bin_groups.csv  local_ess_diagnostics.json  local_ess_replicates.csv  local_ess_summary.csv
preprint/research/results/local_ess_oracle/: local_ess_diagnostics.json  local_ess_replicates.csv  local_ess_summary.csv
preprint/sections/: 00_abstract.tex  01_intro.tex  02_setting.tex  03_theory.tex  04_experiments.tex  05_discussion.tex  appendix_a.tex
preprint/style/: macros.tex  preamble.tex
src/shiftstat/: __init__.py  _version.py  exceptions.py  typing.py
src/shiftstat/audit/: __init__.py  auditor.py  discovery.py  results.py
src/shiftstat/bench/: __init__.py  baselines.py  registry.py  results.py  runner.py  scenarios.py
src/shiftstat/calibration/: __init__.py  calibrators.py  evaluator.py  results.py
src/shiftstat/certification/: __init__.py  auditor.py  metrics.py  results.py
src/shiftstat/datasets/: __init__.py  audit_synthetic.py  synthetic.py
src/shiftstat/detect/: __init__.py  detector.py  results.py  statistics.py
src/shiftstat/experiments/: __init__.py  __main__.py  cli.py  config.py  results.py  runner.py
src/shiftstat/metrics/: __init__.py  reliability.py  selective.py  weighted.py
src/shiftstat/plotting/: __init__.py  _base.py  audit.py  benchmark.py  calibration.py  detect.py  reliability.py  reweight.py  selective.py
src/shiftstat/reliability/: __init__.py  analyzer.py  results.py  workflow.py
src/shiftstat/reports/: __init__.py  summaries.py
src/shiftstat/reweight/: __init__.py  importance.py
src/shiftstat/selective/: __init__.py  policy.py  predictor.py  results.py  workflow.py
src/shiftstat/subgroup/: __init__.py  analyzer.py  results.py
src/shiftstat/utils/: __init__.py  artifacts.py  probabilities.py  random.py  schema.py  split.py  validation.py
tests/: conftest.py  test_audit.py  test_benchmarks.py  test_calibration.py  test_certification.py  test_certification_results.py  test_datasets.py  test_detect.py  test_examples.py  test_experiments_cli.py  test_metrics.py  test_plotting.py  test_public_api.py  test_reliability.py  test_reweight.py  test_selective.py  test_subgroup.py  test_utils.py  test_utils_extended.py  test_v2_plotting.py  test_v3_benchmarks.py  test_v3_plotting.py  test_v4_benchmarks.py  test_v4_plotting.py  test_v5_bench.py  test_v5_benchmarks.py  test_v5_experiments.py
tools/: render_readme_equations.py
