[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftstat"
dynamic = ["version"]
description = "Scientific tooling and benchmark workflows for reliability under tabular distribution shift."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Mehdi Oudghiri", email = "mehdioudghiri@outlook.com" },
]
maintainers = [
  { name = "Mehdi Oudghiri", email = "mehdioudghiri@outlook.com" },
]
keywords = [
  "distribution shift",
  "covariate shift",
  "drift detection",
  "importance weighting",
  "worst-group reliability",
  "local effective sample size",
  "subgroup auditing",
  "covariate shift certification",
  "model monitoring",
  "statistical learning",
  "machine learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
]

[project.scripts]
shiftstat-experiment = "shiftstat.experiments.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.4",
  "ruff>=0.4",
  "mypy>=1.8",
  "pandas-stubs>=2.0",
  "types-PyYAML>=6.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]
examples = [
  "jupyter>=1.0",
  "folktables>=0.0.12",
]
release = [
  "build>=1.2",
  "twine>=5.0",
]
security = [
  "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/open-source-labs/shiftstat"
Documentation = "https://github.com/open-source-labs/shiftstat/tree/main/docs"
Repository = "https://github.com/open-source-labs/shiftstat"
Issues = "https://github.com/open-source-labs/shiftstat/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "shiftstat._version.__version__" }

[tool.setuptools.package-data]
shiftstat = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "benchmark: benchmark and publication-artifact regression tests",
  "examples: runnable example-script tests",
  "integration: tests that exercise subprocesses, file-system artifacts, or multi-module workflows",
  "slow: tests expected to take materially longer than unit tests",
]

[tool.coverage.run]
branch = true
source = ["shiftstat"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples", "benchmarks"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "S",
  "C4",
  "SIM",
  "NPY",
]
ignore = [
  "S101",
  "N803",
  "N806",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["T201"]
"benchmarks/*" = ["T201"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = false
warn_unused_ignores = false
strict_equality = true
mypy_path = "src"
packages = ["shiftstat"]

[[tool.mypy.overrides]]
module = ["scipy.*", "sklearn.*"]
ignore_missing_imports = true
